# Tmax

./: .env.example  .gitignore  README.md  metar.txt  pyproject.toml  taf.csv
.github/workflows/: telegram-report.yml
configs/: default.yaml  eddm.yaml  eglc.yaml  ltfm.yaml  mmmx.yaml  rjtt.yaml  rkpk.yaml  wihh.yaml  wsss.yaml  zbaa.yaml  zspd.yaml
data/eddm/: openmeteo-eddm-2026-06-23.json  openmeteo-eddm-2026-06-24.json  openmeteo-eddm-history.json
data/eglc/: openmeteo-eglc-2026-06-24.json  openmeteo-eglc-history.json
data/ltfm/: openmeteo-ltfm-2026-06-24.json  openmeteo-ltfm-history.json
data/rjtt/: openmeteo-rjtt-2026-06-22.json  openmeteo-rjtt-2026-06-23.json  openmeteo-rjtt-history.json
data/rksi/: openmeteo-rksi-2026-06-23.json  openmeteo-rksi-2026-06-24.json  openmeteo-rksi-2026-06-26.json  openmeteo-rksi-history.json
data/shared/: metar.txt
data/wsss/: openmeteo-wsss-2026-06-23.json  openmeteo-wsss-history.json
docs/: cli-reference.md  configuration.md  daily-tmax-expert-report.md  next-metar-temp-usage.md  next-metar-temp.md  predict-heat-risk.md  ui-dashboard-context.md
scripts/: create_model_release.ps1  daily_heat_risk.py  eval_interval_coverage.py  send_telegram_report.mjs
src/rksi_tmax/: __init__.py  cli.py  config.py  features.py  heat_risk.py  metar_import.py  mongo_source.py  next_metar_temp.py  openmeteo.py  storage.py  telegram_report.py  ui_app.py  ui_components.py  ui_state.py
src/rksi_tmax/services/: __init__.py  artifact_service.py  config_service.py  db_service.py  metar_service.py  next_metar_service.py  prediction_service.py  training_service.py
src/rksi_tmax/ui_tabs/: __init__.py  create_location_tab.py  location_tab.py  metar_tab.py  next_metar_tab.py  predict_tab.py  train_tab.py
tests/: test_config_service.py  test_features.py  test_heat_risk.py  test_metar_import.py  test_metar_service.py  test_next_metar_temp.py  test_openmeteo.py  test_storage.py  test_telegram_report.py
