[project]
name = "rksi-tmax"
version = "0.1.0"
description = "Predict daily maximum temperature at RKSI from historical METAR/ASOS observations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.4",
    "matplotlib>=3.9",
    "numpy>=1.26",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=16.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
    "seaborn>=0.13",
]

[project.scripts]
rksi-import-metar = "rksi_tmax.cli:import_metar_main"
rksi-build-heat-risk-dataset = "rksi_tmax.cli:build_heat_risk_dataset_main"
rksi-train-heat-risk = "rksi_tmax.cli:train_heat_risk_main"
rksi-validate-heat-risk = "rksi_tmax.cli:validate_heat_risk_main"
rksi-predict-heat-risk = "rksi_tmax.cli:predict_heat_risk_main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rksi_tmax"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
