[project]
name = "rksi-tmax"
version = "0.1.0"
description = "Predict daily maximum temperature heat risk from historical METAR/ASOS observations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2024.0",
    "duckdb>=1.1",
    "joblib>=1.4",
    "matplotlib>=3.9",
    "numpy>=1.26",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=16.0",
    "pymongo>=4.6",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
    "seaborn>=0.13",
    "streamlit>=1.36",
]

[project.scripts]
rksi-import-metar = "rksi_tmax.cli:import_metar_main"
rksi-fetch-metar = "rksi_tmax.cli:fetch_metar_main"
rksi-fetch-openmeteo = "rksi_tmax.cli:fetch_openmeteo_main"
rksi-sync-duckdb = "rksi_tmax.cli:sync_duckdb_main"
rksi-build-heat-risk-dataset = "rksi_tmax.cli:build_heat_risk_dataset_main"
rksi-train-heat-risk = "rksi_tmax.cli:train_heat_risk_main"
rksi-validate-heat-risk = "rksi_tmax.cli:validate_heat_risk_main"
rksi-predict-heat-risk = "rksi_tmax.cli:predict_heat_risk_main"
rksi-build-next-metar-dataset = "rksi_tmax.cli:build_next_metar_dataset_main"
rksi-train-next-metar-temp = "rksi_tmax.cli:train_next_metar_temp_main"
rksi-predict-next-metar-temp = "rksi_tmax.cli:predict_next_metar_temp_main"
rksi-verify-next-metar-temp = "rksi_tmax.cli:verify_next_metar_temp_main"
rksi = "rksi_tmax.cli:rksi_main"
rkpk = "rksi_tmax.cli:rkpk_main"
rjtt = "rksi_tmax.cli:rjtt_main"
wsss = "rksi_tmax.cli:wsss_main"
rksi-telegram-report = "rksi_tmax.telegram_report:telegram_report_main"
rksi-ui = "rksi_tmax.ui_app:run"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rksi_tmax"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
